# vthell

./: .env.example  .flake8  .gitignore  LICENSE  README.md  addjob.sh  app.py  asgi.py  pyproject.toml  requirements.txt  runauto.sh  runjob.sh  runtwit.sh  schedule.py  vtrip.sh  vtup.sh
.github/ISSUE_TEMPLATE/: 1.bug-report.md  2.feature-request.md  config.yml
.github/workflows/: ci.yml  dataset.yml
dataset/: _auto_scheduler.json  _autoscheduler.json  _bilibili_mapping.json  _twitcasting_mapping.json  _twitch_mapping.json  _youtube_mapping.json  animare.json  autoscheduler.json  axel-v.json  cattleyarg.json  dotlive.json  eilene.json  entum.json  hanayori.json  hololive.json  hololivecn.json  hololiveen.json  hololiveid.json  holostars.json  honeystrap.json  hoshimeguri.json  irisbg.json  kamitsubaki.json  kizunaai.json  lupinusvg.json  mahapanca.json  nijisanji.json  nijisanjien.json  nijisanjiid.json  nijisanjiin.json  nijisanjikr.json  noriopro.json  noripro.json  paryiproject.json  pinkpunkpro.json  prismproject.json  re_act.json  re_act_dansei.json  solovtuber.json  sugarlyric.json  (+14 more)
internals/: __init__.py  constants.py  decorator.py  discover.py  logme.py  monke.py  runner.py  utils.py  vth.py
internals/chat/: README.md  __init__.py  client.py  errors.py  manager.py  parser.py  remapper.py  uploader.py  utils.py  writer.py
migrations/: auto_scheduler.py
pipelines/: ci_hash_dataset.py  multilint.py
script/: schedule.py
scripts/: schedule.py  twitcast.py  vtauto_schedule.py  vtchat_archive.py  vthell.py  vtrip_argsbuild.py  vtrip_helper.py
(+59 files in other folders)
